totally not completed lol, 3/8 done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <h1>Hello World!</h1>
     <hr/>
     <div id="display-element"></div>
-    <button onclick="displayDate()">Click Me</button>
+    <button onclick="displayDate()">Date</button>
     <hr/>
+    <div id="num-to-string"></div>
+    <button onclick="numToString()">Number to String</button>
+    <hr/>
+    <div id="string-to-num"></div>
+    <button onclick="stringToNum()">String to Number</button>
   </body>
 </html>
